2010-07-05  gettextize  <bug-gnu-gettext@gnu.org>

	* m4/gettext.m4: New file, from gettext-0.17.
	* m4/iconv.m4: New file, from gettext-0.17.
	* m4/lib-ld.m4: New file, from gettext-0.17.
	* m4/lib-link.m4: New file, from gettext-0.17.
	* m4/lib-prefix.m4: New file, from gettext-0.17.
	* m4/nls.m4: New file, from gettext-0.17.
	* m4/po.m4: New file, from gettext-0.17.
	* m4/progtest.m4: New file, from gettext-0.17.
	* Makefile.am (EXTRA_DIST): Add ./config.rpath.

2010-07-05  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add ./config.rpath, m4/ChangeLog.

Fri, 23 Feb 2001 17:45:34 +0100
	initial split into Basic parts (to get used elsewhere)
	and advanced Manuproc features