@@ -1,3 +1,14 @@
+2011-02-14  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.18.1.
+	* Rules-quot: New file, from gettext-0.18.1.
+	* boldquot.sed: New file, from gettext-0.18.1.
+	* en@boldquot.header: New file, from gettext-0.18.1.
+	* en@quot.header: New file, from gettext-0.18.1.
+	* insert-header.sin: New file, from gettext-0.18.1.
+	* quot.sed: New file, from gettext-0.18.1.
+	* remove-potcdate.sin: New file, from gettext-0.18.1.
+
 2010-07-05  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Rules-quot: New file, from gettext-0.17.
